force-app/main/default/objects/ARTL_Billing_Staging__c/ARTL_Billing_Staging__c.object-meta.xml
<CustomObject>
    <label>Billing Staging</label>
    <nameField>
        <label>Billing Staging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>