force-app/main/default/objects/ARTL_Billing_Staging__c/fields/ARTL_Bill_Dispatch_Method__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Bill_Dispatch_Method__c</fullName>
    <label>Bill Dispatch Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Dispatch</fullName>
            </value>
            <value>
                <fullName>CD</fullName>
            </value>
            <value>
                <fullName>Paper-Center + E-mail</fullName>
            </value>
            <value>
                <fullName>E-mail</fullName>
            </value>
            <value>
                <fullName>Paper-Circle + E-mail</fullName>
            </value>
            <value>
                <fullName>Paper-Circle</fullName>
            </value>
            <value>
                <fullName>Paper-Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>