force-app/main/default/objects/ARTL_Billing_Staging__c/fields/ARTL_Bill_Frequency__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Bill_Frequency__c</fullName>
    <label>Bill Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Fortnightly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Half Yearly</fullName>
            </value>
            <value>
                <fullName>Bi Monthly</fullName>
            </value>
            <value>
                <fullName>Bi Yearly</fullName>
            </value>
            <value>
                <fullName>Ten yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>