force-app/main/default/objects/ARTL_Billing_Staging__c/fields/ARTL_PO_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>ARTL_PO_Group_Id__c</fullName>
    <label>PO Group Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>