force-app/main/default/objects/ARTL_Billing_Staging__c/fields/BCP_Email__c.field-meta.xml
<CustomField>
    <fullName>BCP_Email__c</fullName>
    <label>BCP Email</label>
    <type>Email</type>
</CustomField>