force-app/main/default/objects/ARTL_Billing_Staging__c/fields/BCP_Id__c.field-meta.xml
<CustomField>
    <fullName>BCP_Id__c</fullName>
    <label>BCP Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>