force-app/main/default/objects/ARTL_Billing_Staging__c/fields/BCP_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>BCP_Last_Name__c</fullName>
    <label>BCP Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>