force-app/main/default/objects/ARTL_Billing_Staging__c/fields/BCP_Phone__c.field-meta.xml
<CustomField>
    <fullName>BCP_Phone__c</fullName>
    <label>BCP Phone</label>
    <type>Phone</type>
</CustomField>