force-app/main/default/objects/ARTL_Billing_Staging__c/fields/Bill_Format__c.field-meta.xml
<CustomField>
    <fullName>Bill_Format__c</fullName>
    <description>Billing format that is being used for this billing account</description>
    <label>Bill Format</label>
    <length>100</length>
    <type>Text</type>
</CustomField>