force-app/main/default/objects/ARTL_Billing_Staging__c/fields/Bill_Franchise_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Bill_Franchise_Tax_Code__c</fullName>
    <label>Bill Franchise Tax Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>