force-app/main/default/objects/ARTL_Billing_Staging__c/fields/Bill_Type__c.field-meta.xml
<CustomField>
    <fullName>Bill_Type__c</fullName>
    <label>Bill Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>