force-app/main/default/objects/ARTL_Billing_Staging__c/fields/Billing_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Number__c</fullName>
    <label>Billing Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>