force-app/main/default/objects/ARTL_Billing_Staging__c/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <description>Billing Address from PO</description>
    <label>Billing Address</label>
    <type>TextArea</type>
</CustomField>