force-app/main/default/objects/ARTL_Billing_Staging__c/fields/Billing_GST__c.field-meta.xml
<CustomField>
    <fullName>Billing_GST__c</fullName>
    <label>Billing Address GST#</label>
    <length>50</length>
    <type>Text</type>
</CustomField>