force-app/main/default/objects/ARTL_Billing_Staging__c/fields/Billing_GST_Applicable_for_Billing__c.field-meta.xml
<CustomField>
    <fullName>Billing_GST_Applicable_for_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing GST Applicable for Billing</label>
    <type>Checkbox</type>
</CustomField>