force-app/main/default/objects/ARTL_Billing_Staging__c/fields/Billing_Level__c.field-meta.xml
<CustomField>
    <fullName>Billing_Level__c</fullName>
    <label>Billing Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>