force-app/main/default/objects/ARTL_Billing_Staging__c/fields/Billing_PinCode__c.field-meta.xml
<CustomField>
    <fullName>Billing_PinCode__c</fullName>
    <label>Billing PinCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>