force-app/main/default/objects/ARTL_Billing_Staging__c/fields/Billing_Standard_Reason__c.field-meta.xml
<CustomField>
    <fullName>Billing_Standard_Reason__c</fullName>
    <label>Billing Standard Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>