force-app/main/default/objects/ARTL_Billing_Staging__c/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <label>Billing Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>