force-app/main/default/objects/ARTL_Billing_Staging__c/fields/BillingFrequency__c.field-meta.xml
<CustomField>
    <fullName>BillingFrequency__c</fullName>
    <label>Billing Frequency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>