force-app/main/default/objects/ARTL_Billing_Staging__c/fields/Credit_Period__c.field-meta.xml
<CustomField>
    <fullName>Credit_Period__c</fullName>
    <label>Credit Period</label>
    <length>50</length>
    <type>Text</type>
</CustomField>