force-app/main/default/objects/ARTL_Billing_Staging__c/fields/DCP_Email__c.field-meta.xml
<CustomField>
    <fullName>DCP_Email__c</fullName>
    <label>DCP Email</label>
    <type>Email</type>
</CustomField>