force-app/main/default/objects/ARTL_Billing_Staging__c/fields/DCP_Id__c.field-meta.xml
<CustomField>
    <fullName>DCP_Id__c</fullName>
    <label>DCP Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>