force-app/main/default/objects/ARTL_Billing_Staging__c/fields/DCP_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>DCP_Last_Name__c</fullName>
    <label>DCP Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>