force-app/main/default/objects/ARTL_Billing_Staging__c/fields/DCP_Phone__c.field-meta.xml
<CustomField>
    <fullName>DCP_Phone__c</fullName>
    <label>DCP Phone</label>
    <type>Phone</type>
</CustomField>