force-app/main/default/objects/ARTL_Billing_Staging__c/fields/Delivery_GST__c.field-meta.xml
<CustomField>
    <fullName>Delivery_GST__c</fullName>
    <label>Delivery GST#</label>
    <length>50</length>
    <type>Text</type>
</CustomField>