force-app/main/default/objects/ARTL_Billing_Staging__c/fields/Delivery_Standard_Reason__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Standard_Reason__c</fullName>
    <label>Delivery Standard Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>