force-app/main/default/objects/ARTL_Billing_Staging__c/fields/Has_Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Has_Billing_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Billing Account</label>
    <type>Checkbox</type>
</CustomField>