force-app/main/default/objects/ARTL_Billing_Staging__c/fields/Installation_GST__c.field-meta.xml
<CustomField>
    <fullName>Installation_GST__c</fullName>
    <label>Installation GST#</label>
    <length>50</length>
    <type>Text</type>
</CustomField>