force-app/main/default/objects/ARTL_Billing_Staging__c/fields/InvoiceShipmentAddress__c.field-meta.xml
<CustomField>
    <fullName>InvoiceShipmentAddress__c</fullName>
    <description>Invoice Shipment address from PO</description>
    <label>Invoice Shipment Address</label>
    <type>TextArea</type>
</CustomField>