force-app/main/default/objects/ARTL_Billing_Staging__c/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <label>Legal Entity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>