force-app/main/default/objects/ARTL_Billing_Staging__c/fields/License_Company__c.field-meta.xml
<CustomField>
    <fullName>License_Company__c</fullName>
    <label>License Company</label>
    <length>30</length>
    <type>Text</type>
</CustomField>