force-app/main/default/objects/ARTL_Billing_Staging__c/fields/LSI__c.field-meta.xml
<CustomField>
    <fullName>LSI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LSI Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>