force-app/main/default/objects/ARTL_Billing_Staging__c/fields/NBA_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>NBA_Account_Number__c</fullName>
    <label>NBA Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>