force-app/main/default/objects/ARTL_Billing_Staging__c/fields/PO_End_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_End_Date__c</fullName>
    <label>PO End Date</label>
    <type>Date</type>
</CustomField>