force-app/main/default/objects/ARTL_Billing_Staging__c/fields/PO_Group__c.field-meta.xml
<CustomField>
    <fullName>PO_Group__c</fullName>
    <label>PO Group#</label>
    <length>50</length>
    <type>Text</type>
</CustomField>