force-app/main/default/objects/ARTL_Billing_Staging__c/fields/PO_Starte_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Starte_Date__c</fullName>
    <label>PO Starte Date</label>
    <type>Date</type>
</CustomField>