force-app/main/default/objects/ARTL_Billing_Staging__c/fields/PO_Terms_Years__c.field-meta.xml
<CustomField>
    <fullName>PO_Terms_Years__c</fullName>
    <label>PO Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 Months</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 Months</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 Months</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 Months</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 Months</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6 Months</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>7 Months</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8 Months</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>9 Months</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10 Months</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>11 Months</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>12 Months</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>15 Months</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>18 Months</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>21 Months</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>24 Months</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>27 Months</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>30 Months</label>
            </value>
            <value>
                <fullName>36</fullName>
                <label>36 Months</label>
            </value>
            <value>
                <fullName>48</fullName>
                <label>48 Months</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>60 Months</label>
            </value>
            <value>
                <fullName>72</fullName>
                <label>72 Months</label>
            </value>
            <value>
                <fullName>84</fullName>
                <label>84 Months</label>
            </value>
            <value>
                <fullName>96</fullName>
                <label>96 Months</label>
            </value>
            <value>
                <fullName>108</fullName>
                <label>108 Months</label>
            </value>
            <value>
                <fullName>120</fullName>
                <label>120 Months</label>
            </value>
            <value>
                <fullName>180</fullName>
                <label>180 Months</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>