force-app/main/default/objects/ARTL_Billing_Staging__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>