force-app/main/default/objects/ARTL_Billing_Staging__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Billing Stagings</relationshipLabel>
    <relationshipName>Billing_Stagings</relationshipName>
    <type>Lookup</type>
</CustomField>