force-app/main/default/objects/ARTL_Billing_Staging__c/fields/Quote_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Quote Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Billing Stagings</relationshipLabel>
    <relationshipName>Billing_Stagings</relationshipName>
    <type>Lookup</type>
</CustomField>