force-app/main/default/objects/ARTL_Billing_Staging__c/fields/Quote_Member__c.field-meta.xml
<CustomField>
    <fullName>Quote_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Member</label>
    <referenceTo>vlocity_cmt__QuoteMember__c</referenceTo>
    <relationshipLabel>Billing Stagings</relationshipLabel>
    <relationshipName>Billing_Stagings</relationshipName>
    <type>Lookup</type>
</CustomField>