force-app/main/default/objects/ARTL_Billing_Staging__c/fields/QuoteLineItem__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineItem__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QuoteLineItem</label>
    <length>20</length>
    <type>Text</type>
</CustomField>