force-app/main/default/objects/ARTL_Billing_Staging__c/fields/Service_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Account_Id__c</fullName>
    <label>Service Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>