force-app/main/default/objects/ARTL_Billing_Staging__c/fields/Shipping_PinCode__c.field-meta.xml
<CustomField>
    <fullName>Shipping_PinCode__c</fullName>
    <label>Shipping PinCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>