force-app/main/default/objects/ARTL_Billing_Staging__c/fields/Site_City__c.field-meta.xml
<CustomField>
    <fullName>Site_City__c</fullName>
    <label>Site City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>