force-app/main/default/objects/ARTL_Billing_Staging__c/fields/Site_Country__c.field-meta.xml
<CustomField>
    <fullName>Site_Country__c</fullName>
    <label>Site Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>