force-app/main/default/objects/ARTL_Billing_Staging__c/fields/Site_is_Same_as_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Site_is_Same_as_Billing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site is Same as Billing Address</label>
    <type>Checkbox</type>
</CustomField>