force-app/main/default/objects/ARTL_Billing_Staging__c/fields/Site_PinCode__c.field-meta.xml
<CustomField>
    <fullName>Site_PinCode__c</fullName>
    <label>Site PinCode</label>
    <length>15</length>
    <type>Text</type>
</CustomField>