force-app/main/default/objects/ARTL_Billing_Staging__c/fields/Site_Street__c.field-meta.xml
<CustomField>
    <fullName>Site_Street__c</fullName>
    <label>Site Street</label>
    <type>TextArea</type>
</CustomField>