force-app/main/default/objects/ARTL_Billing_Staging__c/fields/StandardReasonforTaxExemption__c.field-meta.xml
<CustomField>
    <fullName>StandardReasonforTaxExemption__c</fullName>
    <label>Standard Reason for Tax Exemption</label>
    <length>50</length>
    <type>Text</type>
</CustomField>