force-app/main/default/objects/ARTL_Billing_Staging__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>144</length>
    <type>Text</type>
</CustomField>