force-app/main/default/objects/ARTL_Billing_Staging__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <label>Store</label>
    <length>100</length>
    <type>Text</type>
</CustomField>