force-app/main/default/objects/ARTL_Billing_Staging__c/fields/Taxation__c.field-meta.xml
<CustomField>
    <fullName>Taxation__c</fullName>
    <label>Taxation</label>
    <length>18</length>
    <type>Text</type>
</CustomField>