force-app/main/default/objects/ARTL_Billing_Staging__c/fields/Usage_Flag__c.field-meta.xml
<CustomField>
    <fullName>Usage_Flag__c</fullName>
    <label>Usage Flag</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>