force-app/main/default/objects/ARTL_Billing_Staging__c/fields/Validation_Message__c.field-meta.xml
<CustomField>
    <fullName>Validation_Message__c</fullName>
    <label>Validation Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>