force-app/main/default/objects/ARTL_Billing_Staging__c/fields/VAN_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>VAN_Account_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>VAN Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>