force-app/main/default/objects/ARTL_Billing_Staging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Quote__c</columns>
    <columns>Quote_Line_Item__c</columns>
    <columns>Quote_Member__c</columns>
    <columns>DCP_First_Name__c</columns>
    <columns>DCP_Last_Name__c</columns>
    <columns>DCP_Phone__c</columns>
    <columns>Status__c</columns>
    <columns>Validation_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>